# python-fcl-octomap

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  blender_requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: push.yml  release.yml  wheels.yml
build_dependencies/: Dockerfile  install_linux.sh  install_macos.sh  install_windows.ps1  install_windows_ci.ps1
example/: example.py
examples/: example.py  example_pc.py
fcl/: __init__.py  collision_data.py  fcl.pyx  fcl_defs.pxd  interval.py  mesh.pyx  octomap_defs.pxd  std_defs.pxd  transform.py
pkg/: compile.sh  compile_py26.sh  fcl_conda_build.sh  run_tests.sh
pkg/conda/: build.sh  meta.yaml
requirements/: Dockerfile  build.bash  clone.bash  install_cmake.bash  install_pip.bash
src/fcl/: __init__.py  collision_data.py  fcl.pyx  fcl_defs.pxd  octomap_defs.pxd  std_defs.pxd  version.py
test/: fcl_unit_test.py  mesh_unit_test.py  test_fcl.py
tests/: test_fcl.py  test_precision.py
