[build-system]
requires = [
	"setuptools",
	"wheel",
	"Cython<3.0",
	"oldest-supported-numpy; python_version<'3.12'",
	"numpy>=1.26.0b1; python_version>='3.12'"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*musllinux*"]
test-requires = "pytest"
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
before-all = "bash build_dependencies/install_linux.sh"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
before-all = "bash build_dependencies/install_macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell build_dependencies\\install_windows.ps1"
archs = ["AMD64"]