[metadata]
name = python-fcl
version = attr: fcl.__version__
description = Python bindings for the Flexible Collision Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CyrilWaechter/python-fcl
maintainer = Cyril Waechter
maintainer_email = cyrwae@hotmail.com
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords = fcl collision distance

[options]
include_package_data = True
package_dir =
    = src
packages = find:
setup_requires =
    numpy
    Cython
install_requires =
    numpy
    Cython

[options.package_data]
* = *.pyx, *.pxd

[options.packages.find]
where = src