[metadata]
name = python-fcl
version = attr: fcl.__version__
description = Python bindings for the Flexible Collision Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CyrilWaechter/python-fcl
author = Jelle Feringa, Matthew Matl, Shirokuma, Michael Dawson-Haggerty, See contributor list
author_email = jelleferinga@gmail.com, mmatl@eecs.berkeley.edu, rootstock_acg@yahoo.co.jp
maintainer = Cyril Waechter
maintainer_email = cyrwae@hotmail.com
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
keywords = fcl collision distance

[options]
include_package_data = True
package_dir =
    = src
packages = find:
setup_requires =
    numpy
    Cython
install_requires =
    numpy
    Cython

[options.package_data]
* = *.pyx, *.pxd, *.dll

[options.packages.find]
where = src